--- a/Reto_Pinion/Styles/Style_Index.CSS
+++ b/Reto_Pinion/Styles/Style_Index.CSS
@@ -1,8 +1,8 @@
 body {
-background-color: rgb(139, 13, 139);
+    background-color: rgb(139, 13, 139);
+    text-align: center;
 }
 
 header {
-    border-color: black;
     border-radius: 5px;
 }
