--- a/Reto_Pinion/Styles/Style_Index.CSS
+++ b/Reto_Pinion/Styles/Style_Index.CSS
@@ -1,9 +1,4 @@
 body {
-    background-color: rgb(139, 13, 139);
+    background: linear-gradient(to button, rgb(189, 17, 189), rgb(134, 17, 134));
     text-align: center;
-}
-
-header {
-    background-color: white;
-    border-radius: 5px;
 }
