--- a/Reto_Pinion/Styles/Style_Index.css
+++ b/Reto_Pinion/Styles/Style_Index.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to bottom, rgb(175, 19, 175), rgb(114, 14, 114), rgb(92, 12, 92));
+    background: linear-gradient(135deg, #bd11bd 0%, #7a0d7a 50%, #3d063d 100%);
     text-align: center;
 }
 
