--- a/Reto_Pinion/Styles/Style_Descripcion.css
+++ b/Reto_Pinion/Styles/Style_Descripcion.css
@@ -1,3 +1,10 @@
+body {
+    background: linear-gradient(135deg, #bd11bd 0%, #7a0d7a 50%, #3d063d 100%);
+    text-align: center;
+    min-height: 100vh;
+}
+
+
 article {
     border-radius: 5px;
     background-color: white;
