--- a/Reto_Pinion/Styles/Style_Index.css
+++ b/Reto_Pinion/Styles/Style_Index.css
@@ -1,7 +1,7 @@
 body {
     background: linear-gradient(135deg, #bd11bd 0%, #7a0d7a 50%, #3d063d 100%);
     text-align: center;
-    min-height: 480px;
+    min-height: 100vh;
 }
 
 .next {
