--- a/Reto_Pinion/Styles/Style_indice.css
+++ b/Reto_Pinion/Styles/Style_indice.css
@@ -54,7 +54,7 @@ header {
     padding: 40px;
 }   
 
-#A4, #B4, #A5, #B5, #A6 {
+#problematica, #resolver, #proceso, #B5 {
     height: 100px;
     width: 150px;
     background-color: white;
@@ -66,7 +66,7 @@ header {
     transition: all 0.2s ease;
 }
 
-#A4:hover, #B4:hover, #A5:hover, #B5:hover, #A6:hover {
+#A4:hover, #B4:hover, #A5:hover, #B5:hover {
     background-color: white;
     transform: scale(1.05);
 }
