--- a/Reto_Pinion/Styles/Style_indice.css
+++ b/Reto_Pinion/Styles/Style_indice.css
@@ -29,7 +29,6 @@ body {
 }
 
 header {
-    background-color: #364552;
     color: white;
     padding: 3rem 2rem;
     border-bottom: 0.1rem;
@@ -54,7 +53,7 @@ header {
     padding: 40px;
 }   
 
-#problematica, #resolver, #proceso, #B5 {
+#problematica, #resolver, #proceso, #descripcion {
     height: 100px;
     width: 150px;
     background-color: white;
@@ -66,14 +65,14 @@ header {
     transition: all 0.2s ease;
 }
 
-#A4:hover, #B4:hover, #A5:hover, #B5:hover {
+#problematica:hover, #resolver:hover, #proceso:hover, #descripcion:hover {
     background-color: white;
     transform: scale(1.05);
 }
 
 
 @media (max-width: 768px) {
-    #A4, #B4, #A5, #B5, #A6 {
+    #problematica, #resolver, #proceso, #descripcion {
         height: 80px;
         width: 120px;
         font-size: 14px;
@@ -82,7 +81,7 @@ header {
 }
 
 @media (max-width: 480px) {
-    #A4, #B4, #A5, #B5, #A6 {
+    #Aproblematica, #resolver, #proceso, #descripcion {
         height: 60px;
         width: 100px;
         font-size: 12px;
