--- a/Reto_Pinion/Styles/Style_Descripcion.css
+++ b/Reto_Pinion/Styles/Style_Descripcion.css
@@ -7,13 +7,19 @@ body {
 article {
     border-radius: 5px;
     background-color: white;
-    width: 700px;
     margin: 0 auto;
 }
 
 footer {
     border-top: 10px;
     border-radius: 10px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    padding: 20px;
+    z-index: 100;
 }
 
 button {
